add comment for get a user
