# docs/swagger.json
@@ -22,6 +22,24 @@
     "basePath": "/",
     "paths": {
         "/user": {
+            "get": {
+                "description": "get a user",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "get a user",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
             "post": {
                 "description": "create a user",
                 "consumes": [
